# snap-coin-wallet

./: Cargo.toml  README.md
src/: encryption.rs  handle_command.rs  input.rs  main.rs
