[package]
name = "snap-coin-wallet"
version = "4.0.0"
edition = "2024"
authors = ["Ice"]
description = "A simple CLI wallet client for interacting with a Snap Coin network"
readme = "README.md"
license = "MIT OR Apache-2.0"


[dependencies]
aes-gcm = "0.10.3" # Wallet encryption
anyhow = "1.0.100"
crossterm = "0.29.0" # Quick wallet pin reading
dirs = "6.0.0"
rustyline = "17.0.2"
snap-coin = "8.0.0"
tokio = { version = "1.48.0", features = ["full"] }
